<resources>
    <string name="app_name">Refind</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_image">card image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="news">Berita</string>
    <string name="craft">Kerajinan</string>
    <string name="saveBtn">Simpan</string>
    <string name="about">Tentang kami</string>
    <string name="news_title">Judul Berita</string>
    <string name="news_content">Isi Berita</string>
    <string name="about_content">Refind adalah aplikasi yang membantu mengatasi masalah lingkungan dengan mendaur ulang sampah secara cepat dan efisien. Melalui fitur pendeteksian gambar, aplikasi ini memungkinkan pengguna mengidentifikasi jenis sampah dan mendapatkan saran cara memilahnya.\n\nSelain mempermudah proses daur ulang, Refind juga berperan sebagai sarana edukasi untuk meningkatkan kesadaran masyarakat akan pentingnya pengelolaan sampah dan keberlanjutan lingkungan. Dengan adanya Refind, masyarakat dapat mengolah sampah menjadi berbagai kerajinan tangan yang bernilai jual, sehingga dapat meningkatkan pendapatan dan mengembangkan usaha mikro, kecil, dan menengah (UMKM).</string>
    <string name="craft_title">Nama Kerajinan</string>
    <string name="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="email_hint">Enter your email</string>
    <string name="use_correct_email_format">Use correct email format</string>
    <string name="password_hint">Enter your password</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="username_hint">Enter your username</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Register</string>
    <string name="banner_login">Masuk dan mulai jaga bumi bersama</string>
    <string name="banner_register">Bergabunglah dan ekspresikan kreativitas daur ulangmu!</string>

    <string name="home_title">Beranda</string>
    <string name="setting_title">Pengaturan</string>
    <string name="profile_title">Profil</string>
    <string name="Register">Daftar</string>
    <string name="Login">Masuk</string>
    <string name="hint_username">Masukkan username kamu</string>
    <string name="hint_email">Masukkan email kamu</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="past_password">Password baru harus berbeda dengan yang lama</string>
    <string name="hint_new_password">Masukkan password baru kamu</string>
    <string name="hint_confirm_new_password">Masukkan kembali password kamu</string>
    <string name="change">Ubah</string>
    <string name="plastic">Plastik</string>
    <string name="paper">Kertas</string>
    <string name="cardboard">Kardus</string>
    <string name="clothe">Baju</string>
    <string name="metal">Kaleng</string>
    <string name="shoe">Sepatu</string>
    <string name="glass">Kaca</string>
    <string name="biological">Organik</string>
    <string name="battery">Baterai</string>
    <string name="trash">Sampah berbahaya</string>
    <string name="welcome_text">Barang bekas numpuk? ayo olah jadi kerajinan!</string>
    <string name="password">Password</string>
    <string name="forgot_password_btn">Lupa Password?</string>
    <string name="no_account">Belum punya akun?</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="analyze_result">Hasil Analisis</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="permission">Izin Akses</string>
    <string name="camera">Kamera</string>
    <string name="file">File</string>
    <string name="about_refind">Tentang Refind</string>
    <string name="log_out">Keluar</string>
    <string name="craft_list">Ide kerajinan</string>
    <string name="warning_bio">Sampah organik tidak dapat diolah menjadi kerajinan, sebaiknya diperlakukan dengan hati-hati</string>
    <string name="treatment_bio">Pertimbangkan untuk mengolahnya menjadi pupuk kompos, atau buang dengan cara yang aman</string>
    <string name="warning_no_craft">Sayangnya barang tersebut mengandung bahan berbahaya untuk diolah</string>
    <string name="treatment_no_craft">Pastikan barang tersebut dibuang dengan aman, seperti membungkusnya rapat dalam kantong plastik dan membuangnya ke tempat sampah</string>
    <string name="other">Lainnya</string>
    <string name="continue_with_google">Masuk Dengan Google</string>
    <string name="result_title">Barang tersebut merupakan :</string>
</resources>