<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.ResultFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/result_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/predict_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="bold"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_craft_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primaryGreen"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/craft_list"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>