<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.RegisterFragment"
    android:id="@+id/register_fragment">

    <ScrollView
        android:id="@+id/scrollViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/usernameContainer"
                app:layout_constraintStart_toStartOf="parent" />
            <!-- Username Input Section -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="textPersonName"
                    android:hint="@string/username_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/emailContainer"
                app:layout_constraintStart_toStartOf="parent" />
            <!-- Email Input Section -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/usernameContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/passwordContainer"
                app:layout_constraintStart_toStartOf="parent" />
            <!-- Password Input Section -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/emailContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Register Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegister"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:backgroundTint="@color/primaryGreen"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp" />

            <!-- Register Suggestion -->
            <TextView
                android:id="@+id/textRegisterPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/buttonRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="@string/Register"
                android:textColor="@color/primaryGreen"
                android:textSize="12sp"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
                app:layout_constraintStart_toEndOf="@+id/textRegisterPrompt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
