<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/background">

    <!-- Center SVG Image -->
    <ImageView
        android:id="@+id/wavy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/union"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/circleBackground"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/baseline_circle_1000"
        android:backgroundTint="@color/background"
        app:layout_constraintBottom_toBottomOf="@id/wavy"
        android:layout_marginBottom="-100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Title Text -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp" />

    <ImageView
        android:id="@+id/centerImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription=""
        app:srcCompat="@drawable/thinking"
        app:layout_constraintTop_toTopOf="@id/circleBackground"
        app:layout_constraintStart_toStartOf="@id/circleBackground"
        app:layout_constraintEnd_toEndOf="@id/circleBackground"
        android:layout_marginTop="16dp" />

    <!-- Subtitle Text -->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/circleBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Register Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/secondaryGreen"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="10dp"
        android:layout_marginTop="24dp" />

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="@color/primaryGreen"
        android:backgroundTint="@color/background"
        app:strokeColor="@color/primaryGreen"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="10dp"
        android:layout_marginTop="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
